--- a/2. 开始/2. 拓展解剖.md
+++ b/2. 开始/2. 拓展解剖.md
@@ -1,1 +1,81 @@
-# 
+# 扩展解剖
+在上一个主题，您已经可以运行一个基础的扩展。它是如何在引擎下运行的？
+
+`Hello World`扩展做了三件事
+- 注册`onCommand`[**启用事件**](/9.%20%E6%9F%A5%E9%98%85/3.%20%E5%90%AF%E7%94%A8%E4%BA%8B%E4%BB%B6.md)：`onCommand:helloworld.helloworld`，所以在用户使用`Hello World`命令时扩展启用
+- 使用`contributes.commands`[**贡献点**](/9.%20%E6%9F%A5%E9%98%85/2.%20%E8%B4%A1%E7%8C%AE%E7%82%B9.md)使`Hello World`在命令面板中可用，然后绑定它和它的标识符`helloworld.helloworld`
+- 使用`command.registerCommand`[**VSCode应用程序接口**](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%E5%BA%94%E7%94%A8%E7%A8%8B%E5%BA%8F%E6%8E%A5%E5%8F%A3.md)绑定一个函数到已注册命令标识符`helloworld.helloworld`
+
+理解这三个概念是在VS Code中编写插件的关键
+- [**启用事件**](/9.%20%E6%9F%A5%E9%98%85/3.%20%E5%90%AF%E7%94%A8%E4%BA%8B%E4%BB%B6.md): 您的扩展启用时的事件
+- [**贡献点**](/9.%20%E6%9F%A5%E9%98%85/2.%20%E8%B4%A1%E7%8C%AE%E7%82%B9.md): 您在`package.json`中的静态声明[扩展清单](/9.%20%E6%9F%A5%E9%98%85/4.%20%E6%89%A9%E5%B1%95%E6%B8%85%E5%8D%95.md)扩展VS Code
+- [**VS Code应用程序接口**](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%E5%BA%94%E7%94%A8%E7%A8%8B%E5%BA%8F%E6%8E%A5%E5%8F%A3.md): 一个您可以在扩展代码中调用的Javascript应用程序接口集合
+
+通常，您的扩展将使用贡献点与VS Code应用程序接口的组合扩展VS Code的功能。[扩展能力概览](/3.%20%E6%89%A9%E5%B1%95%E8%83%BD%E5%8A%9B/1.%20%E6%A6%82%E8%A7%88.md)主题帮助您找到您插件中正确的贡献点与VS Code应用程序接口
+
+让我们更进一步看向`Hello World`示例源代码并了解这些概念是如何应用的。
+
+## 扩展文件结构
+```c
+.
+├── .vscode
+│   ├── launch.json     // 启动与调试的配置
+│   └── tasks.json      // 编译Typescript时的构建任务配置
+├── .gitignore          // 无视构建输出与node_modules
+├── README.md           // 您的扩展功能可读的简介
+├── src
+│   └── extension.ts    // 扩展源代码
+├── package.json        // 扩展清单
+├── tsconfig.json       // TypeScript配置
+```
+您可以阅读更多关于配置文件：
+- `launch.json`用于配置VS Code[调试](https://code.visualstudio.com/docs/editor/debugging)
+- `tasks.json`定义VS Code[任务](https://code.visualstudio.com/docs/editor/tasks)
+- `tsconfig.json`查阅Typescript[手册](https://www.typescriptlang.org/docs/handbook/tsconfig-json.html)
+
+然而，让我们聚焦到理解`Hello World`扩展重要的`package.json`与`extension.ts`
+
+### 扩展清单
+每个VS Code扩展必须有`package.json`作为它的[扩展清单](/9.%20%E6%9F%A5%E9%98%85/4.%20%E6%89%A9%E5%B1%95%E6%B8%85%E5%8D%95.md)。`package.json`包含Node.js例如`scripts`与`devDependencies`和VS Code指定如`publisher`、`activationEvents`和`contributes`混合字段。您可以在[扩展清单查阅](/9.%20%E6%9F%A5%E9%98%85/4.%20%E6%89%A9%E5%B1%95%E6%B8%85%E5%8D%95.md)中找到所有VS Code指定的字段。这里是一些重要字段：
+- `name`与`publisher`:VS Code使用`<publisher>.<name>`作为拓展独一无二的标识符。例如，Hello World示例拥有标识符`vscode-samples.helloworld-sample`。VS Code使用标识符识别您的扩展
+- `main`:扩展的进入点
+- `activationEvents`与`contributes`:[启用事件](/9.%20%E6%9F%A5%E9%98%85/3.%20%E5%90%AF%E7%94%A8%E4%BA%8B%E4%BB%B6.md)和[贡献点](/9.%20%E6%9F%A5%E9%98%85/2.%20%E8%B4%A1%E7%8C%AE%E7%82%B9.md)
+- `engine.vscode`:这指定了扩展基于的VS Code应用程序接口的最小版本
+```json
+{
+  "name": "helloworld-sample",
+  "displayName": "helloworld-sample",
+  "description": "HelloWorld example for VS Code",
+  "version": "0.0.1",
+  "publisher": "vscode-samples",
+  "repository": "https://github.com/microsoft/vscode-extension-samples/helloworld-sample",
+  "engines": {
+    "vscode": "^1.51.0"
+  },
+  "categories": ["Other"],
+  "activationEvents": [],
+  "main": "./out/extension.js",
+  "contributes": {
+    "commands": [
+      {
+        "command": "helloworld.helloWorld",
+        "title": "Hello World"
+      }
+    ]
+  },
+  "scripts": {
+    "vscode:prepublish": "npm run compile",
+    "compile": "tsc -p ./",
+    "watch": "tsc -watch -p ./"
+  },
+  "devDependencies": {
+    "@types/node": "^8.10.25",
+    "@types/vscode": "^1.51.0",
+    "tslint": "^5.16.0",
+    "typescript": "^3.4.5"
+  }
+}
+```
+> **注意**：如果扩展目标VS Code版本早于1.74，您必须在`activationEvents`明确写明`onCommand:helloworld.helloWorld`
+## 扩展进入文件
+扩展进入文件输出两个行数，`activate`与`deactivate`。`activate`在您注册的**启用事件**中执行。`deactivate`给您机会在您的扩展禁用之前清理。
