--- a/2. 开始/2. 扩展解剖.md
+++ b/2. 开始/2. 扩展解剖.md
@@ -37,7 +37,7 @@
 
 ### 扩展清单
 每个VS Code扩展必须有`package.json`作为它的[扩展清单](/9.%20%E6%9F%A5%E9%98%85/4.%20%E6%89%A9%E5%B1%95%E6%B8%85%E5%8D%95.md)。`package.json`包含Node.js例如`scripts`与`devDependencies`和VS Code指定如`publisher`、`activationEvents`和`contributes`混合字段。您可以在[扩展清单查阅](/9.%20%E6%9F%A5%E9%98%85/4.%20%E6%89%A9%E5%B1%95%E6%B8%85%E5%8D%95.md)中找到所有VS Code指定的字段。这里是一些重要字段：
-- `name`与`publisher`:VS Code使用`<publisher>.<name>`作为拓展独一无二的标识符。例如，Hello World示例拥有标识符`vscode-samples.helloworld-sample`。VS Code使用标识符识别您的扩展
+- `name`与`publisher`:VS Code使用`<publisher>.<name>`作为扩展独一无二的标识符。例如，Hello World示例拥有标识符`vscode-samples.helloworld-sample`。VS Code使用标识符识别您的扩展
 - `main`:扩展的进入点
 - `activationEvents`与`contributes`:[启用事件](/9.%20%E6%9F%A5%E9%98%85/3.%20%E5%90%AF%E7%94%A8%E4%BA%8B%E4%BB%B6.md)和[贡献点](/9.%20%E6%9F%A5%E9%98%85/2.%20%E8%B4%A1%E7%8C%AE%E7%82%B9.md)
 - `engine.vscode`:这指定了扩展基于的VS Code应用程序接口的最小版本
@@ -78,4 +78,35 @@
 ```
 > **注意**：如果扩展目标VS Code版本早于1.74，您必须在`activationEvents`明确写明`onCommand:helloworld.helloWorld`
 ## 扩展进入文件
-扩展进入文件输出两个行数，`activate`与`deactivate`。`activate`在您注册的**启用事件**中执行。`deactivate`给您机会在您的扩展禁用之前清理。
+扩展进入文件输出两个行数，`activate`与`deactivate`。`activate`在您注册的**启用事件**中执行。`deactivate`给您机会在您的扩展禁用之前清理。在许多扩展，显示清理可能不需要，丙炔`deactivate`方法可能被移除。然而，如果扩展需要在VS Code关闭或扩展禁用、卸载时执行操作，这就是您需要的方法
+
+VS Code扩展应用程序接口在[@types/vscode](https://www.npmjs.com/package/@types/vscode)中声明。`vscode`类型声明的版本由`package.json`中的`engines.vscode`字段控制。`vscode`类型在代码中给予您智能感知、转到声明与其他Typescript语言特性
+
+```typescript
+// 模块'vscode'包含VS Code扩展应用程序接口
+// 导入模块并在您下面的代码中通过它的别名vscode引用
+import * as vscode from 'vscode';
+
+// 这个方法在您的扩展启用时调用
+// 您的扩展在命令第一次执行时启用
+export function activate(context: vscode.ExtensionContext) {
+  // 使用控制台输出诊断信息（console.log）与错误（console.error）
+  // 这行代码仅当插件启用时执行
+  console.log('Congratulations, your extension "helloworld-sample" is now active!');
+
+  // 命令已在package.json文件中声明
+  // 现在使用registerCommand提供命令实现
+  // 命令标识符参数必须与package.json中的command字段匹配
+  let disposable = vscode.commands.registerCommand('helloworld.helloWorld', () => {
+    // 您在这放着的代码将在每次命令执行时执行
+
+    // 显示一个消息框给用户
+    vscode.window.showInformationMessage('Hello World!');
+  });
+
+  context.subscriptions.push(disposable);
+}
+
+// 这个方法在您的插件禁用时调用
+export function deactivate() {}
+```
