--- a/2. 开始/3. 结束语.md
+++ b/2. 开始/3. 结束语.md
@@ -9,7 +9,7 @@
 我们有一大堆您可以修改的示例扩展，有一些包括详细解释源代码的指南。您可以在[扩展指南列表](/4.%20%E6%89%A9%E5%B1%95%E6%8C%87%E5%8D%97/1.%20%E6%A6%82%E8%A7%88.md)或[vscode-extension-samples](https://github.com/microsoft/vscode-extension-samples)仓库找到所有示例和指南
 
 ## 用户体验指南
-为了帮助您的扩展无形中更适合VS Code用户接口，参考[用户体验指南](/5.%20%E7%94%A8%E6%88%B7%E4%BD%93%E9%AA%8C%E6%8C%87%E5%8D%97/1.%20%E6%A6%82%E8%A7%88.md)，在那里您将学习最好的跟随工作流程创建扩展用户接口练习和规范
+为了帮助您的扩展无形中更适合VS Code用户界面，参考[用户体验指南](/5.%20%E7%94%A8%E6%88%B7%E4%BD%93%E9%AA%8C%E6%8C%87%E5%8D%97/1.%20%E6%A6%82%E8%A7%88.md)，在那里您将学习最好的跟随工作流程创建扩展用户界面练习和规范
 ## 测试与发布
 这节包括帮助您开发高质量VS Code扩展的主题。例如，您将学习
 - 如何添加[集成测试](/7.%20%E6%B5%8B%E8%AF%95%E4%B8%8E%E5%8F%91%E5%B8%83/1.%20%E6%B5%8B%E8%AF%95%E6%89%A9%E5%B1%95.md)至您的扩展
