--- a/2. 开始/1. 您的第一个扩展.md
+++ b/2. 开始/1. 您的第一个扩展.md
@@ -1,9 +1,9 @@
 # 您的第一个扩展
-在这个主题，我们将教您构建扩展的基本概念：确保您已安装[Node.js](https://nodejs.org/)和[Git](https://git-scm.com/)。然后使用下面命令安装[Yeoman](https://yeoman.io/)与[VS Code扩展构建器](https://www.npmjs.com/package/generator-code)
+在这个主题，我们将教您构建扩展的基本概念：确保您已安装[Node.js](https://nodejs.org/)和[Git](https://git-scm.com/)。然后使用下面命令安装[Yeoman](https://yeoman.io/)与[VS Code扩展生成器](https://www.npmjs.com/package/generator-code)
 ```batch
 npm install -g yo generator-code
 ```
-构建器脚手架提供Typescript或Javascript项目开发准备。运行构建器构建一个Typescript项目并填写一些字段：
+构建器脚手架提供Typescript或Javascript项目开发准备。运行生成器生成一个Typescript项目并填写一些字段：
 ```shell
 yo code
 
