Add and fix translations

--- a/2. 开始/3. 结束语.md
+++ b/2. 开始/3. 结束语.md
@@ -4,12 +4,12 @@
 然而，我们仅仅看到了冰山一角，这里有一些建议路线为了您的更远VS Code扩展开发技能
 
 ## 扩展能力
-在这节，我们分割[VS Code应用程序接口](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%E5%BA%94%E7%94%A8%E7%A8%8B%E5%BA%8F%E6%8E%A5%E5%8F%A3.md)和[贡献点](/9.%20%E6%9F%A5%E9%98%85/2.%20%E8%B4%A1%E7%8C%AE%E7%82%B9.md)为几个分类，每个具有简短扩展能做的介绍。通过查阅[VS Code应用程序接口](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%E5%BA%94%E7%94%A8%E7%A8%8B%E5%BA%8F%E6%8E%A5%E5%8F%A3.md)证实您的扩展想法是可实现的或通过阅读[扩展能力](/3.%20%E6%89%A9%E5%B1%95%E8%83%BD%E5%8A%9B/1.%20%E6%A6%82%E8%A7%88.md)产生新的扩展想法
+在这节，我们分割[VS Code API](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md)和[贡献点](/9.%20%E6%9F%A5%E9%98%85/2.%20%E8%B4%A1%E7%8C%AE%E7%82%B9.md)为几个分类，每个具有简短扩展能做的介绍。通过查阅[VS Code API](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md)证实您的扩展想法是可实现的或通过阅读[扩展能力](/3.%20%E6%89%A9%E5%B1%95%E8%83%BD%E5%8A%9B/1.%20%E6%A6%82%E8%A7%88.md)产生新的扩展想法
 ## 指南与示例
 我们有一大堆您可以修改的示例扩展，有一些包括详细解释源代码的指南。您可以在[扩展指南列表](/4.%20%E6%89%A9%E5%B1%95%E6%8C%87%E5%8D%97/1.%20%E6%A6%82%E8%A7%88.md)或[vscode-extension-samples](https://github.com/microsoft/vscode-extension-samples)仓库找到所有示例和指南
 
-## 用户体验指南
-为了帮助您的扩展无形中更适合VS Code用户界面，参考[用户体验指南](/5.%20%E7%94%A8%E6%88%B7%E4%BD%93%E9%AA%8C%E6%8C%87%E5%8D%97/1.%20%E6%A6%82%E8%A7%88.md)，在那里您将学习最好的跟随工作流程创建扩展用户界面练习和规范
+## UX指南
+为了帮助您的扩展无形中更适合VS Code用户界面，参考[UX指南](/5.%20UX%20%E6%8C%87%E5%8D%97/1.%20%E6%A6%82%E8%A7%88.md)，在那里您将学习最好的跟随工作流程创建扩展UI练习和规范
 ## 测试与发布
 这节包括帮助您开发高质量VS Code扩展的主题。例如，您将学习
 - 如何添加[集成测试](/7.%20%E6%B5%8B%E8%AF%95%E4%B8%8E%E5%8F%91%E5%B8%83/1.%20%E6%B5%8B%E8%AF%95%E6%89%A9%E5%B1%95.md)至您的扩展
