--- a/附录-译名表.md
+++ b/附录-译名表.md
@@ -13,16 +13,12 @@
 | manifest | 清单 ||
 | debug | 调试 ||
 | run | 运行 ||
-| UX | 用户体验 ||
-| API | 应用程序接口 ||
-| UI | 用户界面 ||
 | register | 注册 ||
 | configuration | 配置 ||
 | Quick Pick | 快速拾取 ||
 | theme | 主题 ||
 | event | 事件 ||
 | Contribution Point | 贡献点 ||
-| ID | 标识符 ||
 | field | 字段 ||
 | test | 测试 ||
 | publish | 发布 ||
@@ -37,3 +33,6 @@
 | Go to Definitions | 转到定义 ||
 | Diagnostic Errors | 错误诊断 ||
 | CodeLens | 代码透镜 ||
+| debugger | 调试器 ||
+| runtime | 运行时 ||
+| Adapter | 适配器 ||
