--- a/1. 概览.md
+++ b/1. 概览.md
@@ -3,7 +3,7 @@ Visual Studio Code在构建时考虑了可扩展性。从UI到编辑体验，几
 这篇文档介绍：
 - 如果构建、运行、调试、测试并发布一个扩展
 - 如果利用VS Code丰富的扩展API
-- 哪里寻找[指南](4.%20%E6%89%A9%E5%B1%95%E6%8C%87%E5%8D%97/1.%20%E6%A6%82%E8%A7%88.md)与[示例代码](https://github.com/microsoft/vscode-extension-samples)帮助你开始
+- 哪里寻找[指南](4.%20%E6%89%A9%E5%B1%95%E6%8C%87%E5%8D%97/1.%20%E6%A6%82%E8%A7%88.md)与[示例代码](https://github.com/crosoft/vscode-extension-samples)帮助你开始
 - 跟随我们的[UX指南](5.%20UX%20%E6%8C%87%E5%8D%97/1.%20%E6%A6%82%E8%A7%88.md)寻求最好的练习
 示例代码在[Microsoft/vscode-extension-samples](https://github.com/microsoft/vscode-extension-samples)可用
 如果你在寻找已发布的扩展，前往[VSCode扩展市场](https://marketplace.visualstudio.com/vscode)
@@ -14,11 +14,11 @@ Visual Studio Code在构建时考虑了可扩展性。从UI到编辑体验，几
 - 创建一个网络视图以显示一个通过HTML/CSS/JS构建的自定义网页 - [网络视图指南](4.%20%E6%89%A9%E5%B1%95%E6%8C%87%E5%8D%97/7.%20%E7%BD%91%E7%BB%9C%E8%A7%86%E5%9B%BE.md)
 - 支持一个新的编程语言 - [语言扩展概览](6.%20%E8%AF%AD%E8%A8%80%E6%89%A9%E5%B1%95/1.%20%E6%A6%82%E8%A7%88.md)
 - 支持调试一个特定的运行时 - [调试器扩展指南](4.%20%E6%89%A9%E5%B1%95%E6%8C%87%E5%8D%97/16.%20%E8%B0%83%E8%AF%95%E5%99%A8%E6%89%A9%E5%B1%95.md)
-如果你想有更多扩展应用程序接口综合概论，参考[扩展能力概览](3.%20%E6%89%A9%E5%B1%95%E8%83%BD%E5%8A%9B/1.%20%E6%A6%82%E8%A7%88.md)页，[扩展指南概览](4.%20%E6%89%A9%E5%B1%95%E6%8C%87%E5%8D%97/1.%20%E6%A6%82%E8%A7%88.md)同样包括一列示例代码和各种各样扩展应用程序接口用途的说明
+如果你想有更多扩展应用程序接口综合概论，参考[扩展功能概览](3.%20%E6%89%A9%E5%B1%95%E5%8A%9F%E8%83%BD/1.%20%E6%A6%82%E8%A7%88.md)页，[扩展指南概览](4.%20%E6%89%A9%E5%B1%95%E6%8C%87%E5%8D%97/1.%20%E6%A6%82%E8%A7%88.md)同样包括一列示例代码和各种各样扩展应用程序接口用途的说明
 ## 如何构建扩展
 构建一个好的扩展需要花费许多时间与努力。这里应用程序接口文档各部分可以帮助你的东西
 - __开始__ 通过[Hello World](https://github.com/microsoft/vscode-extension-samples/tree/main/helloworld-sample)示例教授构建扩展的基本概念
-- __扩展能力__ 解剖VS Code庞大的API为小的分类与点和更多细要的主题
+- __扩展功能__ 解剖VS Code庞大的API为小的分类与点和更多细要的主题
 - __扩展指南__ 包括解释特定VS Code扩展API用途的指南和示例代码
 - __UX指南__ 展示了在一个扩展中提供优秀的UX的练习
 - __语言扩展__ 使用指南与示例代码解释了如何添加一个编程语言的支持
