--- a/3. 扩展功能/1. 概览.md
+++ b/3. 扩展功能/1. 概览.md
@@ -1,13 +1,13 @@
-# 扩展能力概览
-Visual Studio Code提供许多方式去为扩展扩展能力。有些时候找到正确的[贡献点](/9.%20%E6%9F%A5%E9%98%85/2.%20%E8%B4%A1%E7%8C%AE%E7%82%B9.md)和[VS Code API](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md)使用是困难的。这个主题分割扩展能力为几个小分类。每个分类介绍
+# 扩展功能概览
+Visual Studio Code提供许多方式去为扩展扩展功能。有些时候找到正确的[贡献点](/9.%20%E6%9F%A5%E9%98%85/2.%20%E8%B4%A1%E7%8C%AE%E7%82%B9.md)和[VS Code API](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md)使用是困难的。这个主题分割扩展功能为几个小分类。每个分类介绍
 - 一些您的扩展可以使用的功能
 - 更多使用这些功能的详细主题链接
 - 一些扩展想法
 
 然而，我们[限制](##限制)扩展确保VS Code稳定性与性能。例如，扩展不能访问VS Code UI的DOM。
-## 普通能力
-[普通能力](2.%20%E6%99%AE%E9%80%9A%E8%83%BD%E5%8A%9B.md)是您可以在任何扩展使用的核心功能
-这些能力包括：
+## 通用功能
+[通用功能](2.%20%E9%80%9A%E7%94%A8%E5%8A%9F%E8%83%BD.md)是您可以在任何扩展使用的核心功能
+这些功能包括：
 - 注册命令、配置、快捷键或上下文菜单项
 - 存储工作空间或全局数据
 - 显示通知消息
@@ -30,7 +30,7 @@ __扩展灵感__
 - 使用语法注入扩展已有的语法
 - 将已有的TextMate语法移植到VS Code
 ## 编程语言特性
-[编程语言特性](../6.%20%E8%AF%AD%E8%A8%80%E6%89%A9%E5%B1%95/1.%20%E6%A6%82%E8%A7%88.md#编程语言特性)添加比如悬浮提示、转到定义、错误诊断、智能感知和代码透镜的丰富的语言支持。这些语言特性可通过`vscode.languages.*`API调用。一个扩展可以直接使用这些API，或使用VS Code[语言服务器库](https://github.com/microsoft/vscode-languageserver-node)编写一个语言服务器并使它适应VS Code
+[编程语言特性](../6.%20%E8%AF%AD%E8%A8%80%E6%89%A9%E5%B1%95/1.%20%E6%A6%82%E8%A7%88.md#编程语言特性)添加比如悬浮提示、转到定义、错误诊断、智能感知和代码透镜的丰富的语言支持。这些语言特性可通过[`vscode.languages.*`](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md##languages)API调用。一个扩展可以直接使用这些API，或使用VS Code[语言服务器库](https://github.com/microsoft/vscode-languageserver-node)编写一个语言服务器并使它适应VS Code
 虽然我们提供一系列[语言特性](../6.%20%E8%AF%AD%E8%A8%80%E6%89%A9%E5%B1%95/6.%20%E7%BC%96%E7%A8%8B%E8%AF%AD%E8%A8%80%E7%89%B9%E6%80%A7.md)和它们的预定用法，没什么能妨碍您创造性地使用这些API。例如，代码透镜和悬浮提示是一个很好的提供附加信息的方式，而错误诊断可以用来高亮拼写或代码格式错误。
 __扩展灵感__
 - 添加提示API示例用法的悬浮提示
@@ -55,7 +55,7 @@ __扩展灵感__
 - 为调试器调试配置属性提供强大的智能感知与悬浮信息
 - 提供调试配置片段
 
-另一方面，为了使用户调试体验自动化，VS Code同样提供一套您可以实现完全控制任何VS Code调试器的调试相关功能的[调试扩展API](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md#调试)
+另一方面，为了使用户调试体验自动化，VS Code同样提供一套您可以实现完全控制任何VS Code调试器的调试相关功能的[调试扩展API](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md##debug)
 
 __扩展灵感__
 - 根据动态创建的调试配置启动调试会话
