--- a/9. 查阅/1. VS Code API.md
+++ b/9. 查阅/1. VS Code API.md
@@ -1,1 +1,10 @@
-## 调试
+## commands
+## debug
+## languages
+## window
+## workspace
+### ExtensionContext
+### OutputChannel
+### Progress\<T>
+### ProgressOptions
+### QuickPick\<T>
