--- a/3. 扩展功能/1. 概览.md
+++ b/3. 扩展功能/1. 概览.md
@@ -38,8 +38,8 @@ __扩展灵感__
 - 为HTML注册一个新的代码格式化器
 - 提供一个强大的、具有上下文感知的智能感知
 - 添加一门语言的折叠、面包屑导航和大纲支持
-## 工作区扩展
-[工作区扩展](4.%20%E6%89%A9%E5%B1%95%E5%B7%A5%E4%BD%9C%E5%8C%BA.md)扩展了VS Code工作区UI。添加文件浏览器的右击活动或甚至使用VS Code的[树状视图](../4.%20%E6%89%A9%E5%B1%95%E6%8C%87%E5%8D%97/6.%20%E6%A0%91%E7%8A%B6%E8%A7%86%E5%9B%BE.md) API构建一个自定义浏览器。并且如果您的扩展需要一个完全自定义的用户界面，使用[网络视图应用程序接口](../4.%20%E6%89%A9%E5%B1%95%E6%8C%87%E5%8D%97/7.%20%E7%BD%91%E7%BB%9C%E8%A7%86%E5%9B%BE.md)和标准HTML、CSS、JavaScript构建您自己的文档预览或UI
+## 工作台扩展
+[工作台扩展](4.%20%E6%89%A9%E5%B1%95%E5%B7%A5%E4%BD%9C%E5%8F%B0.md)扩展了VS Code工作台UI。添加文件浏览器的右击活动或甚至使用VS Code的[树状视图](../4.%20%E6%89%A9%E5%B1%95%E6%8C%87%E5%8D%97/6.%20%E6%A0%91%E7%8A%B6%E8%A7%86%E5%9B%BE.md) API构建一个自定义浏览器。并且如果您的扩展需要一个完全自定义的用户界面，使用[网络视图应用程序接口](../4.%20%E6%89%A9%E5%B1%95%E6%8C%87%E5%8D%97/7.%20%E7%BD%91%E7%BB%9C%E8%A7%86%E5%9B%BE.md)和标准HTML、CSS、JavaScript构建您自己的文档预览或UI
 __扩展灵感__
 - 添加自定义上下文菜单活动至文件浏览器
 - 在边栏创建一个新的、可交互的树状视图
