--- a/3. 扩展功能/4. 扩展工作台.md
+++ b/3. 扩展功能/4. 扩展工作台.md
@@ -6,3 +6,22 @@
 - 面板
 - 编辑器组
 - 状态栏
+
+VS Code提供各式各样的允许您添加您自己的组件到工作台的API。例如，如下图：
+![](https://code.visualstudio.com/assets/api/extension-capabilities/extending-workbench/workbench-contribution.png)
+- 活动栏：[Azure App Service extension](https://marketplace.visualstudio.com/items?itemName=ms-azuretools.vscode-azureappservice)添加了一个[视图容器](#视图容器)
+- 边栏：内建[NPM extension](https://github.com/microsoft/vscode/tree/main/extensions/npm)添加了一个[树状视图](#树状视图)到浏览器视图
+- 编辑器组：内建[Markdown extension](https://github.com/microsoft/vscode/tree/main/extensions/markdown-language-features)添加了一个[网络视图](#网络视图)到编辑器组中其他编辑器旁
+- 状态栏：[VSCodeVim extension](https://marketplace.visualstudio.com/items?itemName=vscodevim.vim)添加了一个[状态栏项](#状态栏项)到状态栏
+
+## 视图容器
+使用[`contributes.viewContainers`](/9.%20%E6%9F%A5%E9%98%85/2.%20%E8%B4%A1%E7%8C%AE%E7%82%B9.md#contributes.viewContainers)贡献点，您可以添加显示在五个内建视图容器旁的新视图容器。在[树状视图](/4.%20%E6%89%A9%E5%B1%95%E6%8C%87%E5%8D%97/6.%20%E6%A0%91%E7%8A%B6%E8%A7%86%E5%9B%BE.md)主题了解更多
+## 树状视图
+使用[`contributes.views`](/9.%20%E6%9F%A5%E9%98%85/2.%20%E8%B4%A1%E7%8C%AE%E7%82%B9.md#contributes.views)贡献点，您可以添加在任何视图容器显示的新视图。在[树状视图](/4.%20%E6%89%A9%E5%B1%95%E6%8C%87%E5%8D%97/6.%20%E6%A0%91%E7%8A%B6%E8%A7%86%E5%9B%BE.md)主题了解更多
+## 网络视图
+网络视图是使用HTML/CSS/Javascript可高度自定义的视图。它们显示在编辑器组区域文本编辑器旁。在[网络视图指南](/4.%20%E6%89%A9%E5%B1%95%E6%8C%87%E5%8D%97/7.%20%E7%BD%91%E7%BB%9C%E8%A7%86%E5%9B%BE.md)阅读更多
+## 状态栏项
+扩展可以创建自定义显示在状态栏的[`StatusBarItem`](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md#StatusBarItem)。状态栏项可以显示文字和图标并在点击事件运行命令
+- 显示文字和图标
+- 点击运行命令
+您可以查看[状态栏扩展示例](https://github.com/microsoft/vscode-extension-samples/tree/main/statusbar-sample)了解更多
