--- a/9. 查阅/2. 贡献点.md
+++ b/9. 查阅/2. 贡献点.md
@@ -2,3 +2,5 @@
 ## contributes.configuration
 ## contributes.keybindings
 ## contributes.menus
+## contributes.views
+## contributes.viewsContainers
