--- a/9. 查阅/1. VS Code API.md
+++ b/9. 查阅/1. VS Code API.md
@@ -1,11 +1,23 @@
 ## commands
 ## debug
 ## languages
+## scm
+## tasks
 ## window
 ## workspace
+### CustomTextEditorProvider
 ### ExtensionContext
 ### OutputChannel
 ### Progress\<T>
 ### ProgressOptions
 ### QuickPick\<T>
+### ShellExecution
+### SourceControl
+### SourceControlResourceGroup
+### Task
+### TestController
+### TestItem
+### TextDocumentContentProvider
+### TreeDataProvider\<T>
+### TreeView\<T>
 ### StatusBarItem
