--- a/9. 查阅/2. 贡献点.md
+++ b/9. 查阅/2. 贡献点.md
@@ -1,6 +1,13 @@
+## contributes.breakpoints
 ## contributes.commands
 ## contributes.configuration
+## contributes.customEditors
+## contributes.debuggers
+## contributes.taskDefinitions
+## contributes.iconThemes
 ## contributes.keybindings
 ## contributes.menus
+## contributes.productIconThemes
+## contributes.themes
 ## contributes.views
 ## contributes.viewsContainers
