--- a/4. 扩展指南/1. 概览.md
+++ b/4. 扩展指南/1. 概览.md
@@ -43,4 +43,19 @@
 | [编辑器装饰器示例](https://github.com/microsoft/vscode-extension-samples/tree/main/decorator-sample) | [TextEditor.setDecorations](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md#TextEditor) <br/> [DecorationsOptions](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md#DecorationsOptions) <br/> [DecorationInstanceRenderOptions](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md#DecorationInstanceRenderOptions) <br/> [ThemableDecorationInstanceRenderOptions](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md#ThemableDecorationInstanceRenderOptions) <br/> [window.createTextEditorDecorationType](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md#window) <br/> [TextEditorDecorationType](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md#TextEditorDecorationType) <br/> [contributes.colors](/9.%20%E6%9F%A5%E9%98%85/2.%20%E8%B4%A1%E7%8C%AE%E7%82%B9.md#contributes.colors) |
 | [本地化示例](https://github.com/microsoft/vscode-extension-samples/tree/main/l10n-sample) | |
 | [终端示例](https://github.com/microsoft/vscode-extension-samples/tree/main/terminal-sample) | [window.createTerminal](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md#window) <br/> [window.onDidChangeActiveTerminal](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md#window) <br/> [window.onDidCloseTerminal](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md#window) <br/> [window.onDidOpenTermial](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md#window) <br/> [window.Terminal](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md#Terminal) <br/> [window.terminals](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md#window) |
-[Vim示例](https://github.com/microsoft/vscode-extension-samples/tree/main/vim-sample) |
+[Vim示例](https://github.com/microsoft/vscode-extension-samples/tree/main/vim-sample) | [commands](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md#commands) <br/> [StatusBarItem](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md#StatusBarItem) <br/> [window.createStatusBarItem](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md#window) <br/> [TextEditorCursorStyle](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md#TextEditorCursorStyle) <br/> [window.activeTextEditor](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md#window) <br/> [Position](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md#Position) <br/> [Range](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md#Range) <br/> [Selection](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md#Selection) <br/> [TextEditor](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md#TextEditor) <br/> [TextEditorRevealType](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md#TextEditorRevealType) <br/> [TextDocument](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md#TextDocument) |
+| [源控制示例](https://github.com/microsoft/vscode-extension-samples/tree/main/source-control-sample) | [workspace.workspaceFolders](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md#workspace) <br/> [SourceControl](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md#SourceControl) <br/> [SourceControlResourceGroup](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md#SourceControlResourceGroup) <br/> [scm.createSourceControl](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md#scm) <br/> [TextDocumentContentProvider](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md#TextDocumentContentProvider) <br/> [contributes.menus](/9.%20%E6%9F%A5%E9%98%85/2.%20%E8%B4%A1%E7%8C%AE%E7%82%B9.md#contributes.menus) |
+| [注释API示例](https://github.com/microsoft/vscode-extension-samples/tree/main/comment-sample) | |
+| [文档编辑示例](https://github.com/microsoft/vscode-extension-samples/tree/main/document-editing-sample) |[commands](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md#commands) |
+| [开始示例](https://github.com/microsoft/vscode-extension-samples/tree/main/getting-started-sample) | [contributes.walkthroughs](/9.%20%E6%9F%A5%E9%98%85/2.%20%E8%B4%A1%E7%8C%AE%E7%82%B9.md#contributes.walkthroughs) |
+| [测试扩展](https://github.com/microsoft/vscode-extension-samples/tree/main/test-provider-sample) | [TestControl](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md#TestControl) <br/> [TestItem](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md#TestItem) |
+## 语言扩展示例
+这些是[语言扩展](/6.%20%E8%AF%AD%E8%A8%80%E6%89%A9%E5%B1%95/1.%20%E6%A6%82%E8%A7%88.md)的示例：
+| 示例 | VS Code网站指南 |
+| - | - |
+| [片段示例](https://github.com/microsoft/vscode-extension-samples/tree/main/snippet-sample) | [/api/language-extension/snippet-guide](/6.%20%E8%AF%AD%E8%A8%80%E6%89%A9%E5%B1%95/4.%20%E7%89%87%E6%AE%B5%E6%8C%87%E5%8D%97.md) |
+| [语言配置示例](https://github.com/microsoft/vscode-extension-samples/tree/main/language-configuration-sample) | [/api/language-extension/language-configuration-guide](/6.%20%E8%AF%AD%E8%A8%80%E6%89%A9%E5%B1%95/5.%20%E8%AF%AD%E8%A8%80%E9%85%8D%E7%BD%AE%E6%8C%87%E5%8D%97.md) |
+| [LSP示例](https://github.com/microsoft/vscode-extension-samples/tree/main/lsp-sample) | [/api/language-extension/language-server-extension-guide](/6.%20%E8%AF%AD%E8%A8%80%E6%89%A9%E5%B1%95/7.%20%E8%AF%AD%E8%A8%80%E6%9C%8D%E5%8A%A1%E5%99%A8%E6%89%A9%E5%B1%95%E6%8C%87%E5%8D%97.md) |
+| [LSP日志流示例](https://github.com/microsoft/vscode-extension-samples/tree/main/lsp-log-streaming-sample) | N/A |
+| [LSP多根服务器指南](https://github.com/microsoft/vscode-extension-samples/tree/main/lsp-multi-server-sample) | https://github.com/microsoft/vscode/wiki/Adopting-Multi-Root-Workspace-APIs#language-client--language-server(GitHub仓库Wiki) |
+| [LSP网络扩展示例](https://github.com/Microsoft/vscode-extension-samples/tree/main/lsp-web-extension-sample) | [/api/language-extension/language-server-extension-guide](/6.%20%E8%AF%AD%E8%A8%80%E6%89%A9%E5%B1%95/7.%20%E8%AF%AD%E8%A8%80%E6%9C%8D%E5%8A%A1%E5%99%A8%E6%89%A9%E5%B1%95%E6%8C%87%E5%8D%97.md) |
