--- a/4. 扩展指南/1. 概览.md
+++ b/4. 扩展指南/1. 概览.md
@@ -38,7 +38,7 @@
 | [树状视图示例](https://github.com/microsoft/vscode-extension-samples/tree/main/tree-view-sample) | [window.createTreeView](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md#window) <br/> [window.registerTreeDataProvider](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md#window) <br/> [TreeView](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md#TreeView) <br/> [TreeDataProvider](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md#TreeDataProvider) <br/> [contributes.views](/9.%20%E6%9F%A5%E9%98%85/2.%20%E8%B4%A1%E7%8C%AE%E7%82%B9.md#contributes.views) <br/> [contributes.viewContainers](/9.%20%E6%9F%A5%E9%98%85/2.%20%E8%B4%A1%E7%8C%AE%E7%82%B9.md#contributes.viewContainers) | 
 | [任务提供器示例](https://github.com/microsoft/vscode-extension-samples/tree/main/task-provider-sample) | [tasks.registerTaskProvider](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md#tasks) <br/> [Tasks](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md#Tasks) <br/> [ShellExecution](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md#ShellExecution) <br/> [contributes.taskDefinitions](/9.%20%E6%9F%A5%E9%98%85/2.%20%E8%B4%A1%E7%8C%AE%E7%82%B9.md#contributes.taskDefinitions) |
 | [多根示例](https://github.com/microsoft/vscode-extension-samples/tree/main/basic-multi-root-sample) | [workspace.getWorkspaceFolder](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md#workspace) <br/> [workspace.onDidChangeWorkspaceFolders](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md#workspace) |
-| [完成提供器示例](https://github.com/microsoft/vscode-extension-samples/tree/main/completions-sample) | [languages.registerCompletionItemProvider](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md#languages) <br/> [CompletionItem](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md#CompletionItem) <br/> [SnippetString](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md#SnippetString) |
+| [补全提供器示例](https://github.com/microsoft/vscode-extension-samples/tree/main/completions-sample) | [languages.registerCompletionItemProvider](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md#languages) <br/> [CompletionItem](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md#CompletionItem) <br/> [SnippetString](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md#SnippetString) |
 | [文件系统提供器示例](https://github.com/microsoft/vscode-extension-samples/tree/main/fsprovider-sample) | [workspace.registerFileSystemProvider](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md#workspace) |
 | [编辑器装饰器示例](https://github.com/microsoft/vscode-extension-samples/tree/main/decorator-sample) | [TextEditor.setDecorations](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md#TextEditor) <br/> [DecorationsOptions](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md#DecorationsOptions) <br/> [DecorationInstanceRenderOptions](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md#DecorationInstanceRenderOptions) <br/> [ThemableDecorationInstanceRenderOptions](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md#ThemableDecorationInstanceRenderOptions) <br/> [window.createTextEditorDecorationType](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md#window) <br/> [TextEditorDecorationType](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md#TextEditorDecorationType) <br/> [contributes.colors](/9.%20%E6%9F%A5%E9%98%85/2.%20%E8%B4%A1%E7%8C%AE%E7%82%B9.md#contributes.colors) |
 | [本地化示例](https://github.com/microsoft/vscode-extension-samples/tree/main/l10n-sample) | |
