--- a/4. 扩展指南/2. 命令.md
+++ b/4. 扩展指南/2. 命令.md
@@ -95,7 +95,7 @@ export function activate(context: vscode.ExtensionContext) {
 当网络视图被创建时，您可以在[网络视图](7.%20%E7%BD%91%E7%BB%9C%E8%A7%86%E5%9B%BE.md)中通过在`WebviewOptions`设置`enableCommandUris`启用命令URI
 ## 创建命令
 ### 注册一个命令
-[`vscode.commands.registerCommand`]在您的扩展中绑定命令ID到一个处理程序函数
+[`vscode.commands.registerCommand`]在您的扩展中绑定命令ID到一个处理函数
 ```typescript
 import * as vscode from 'vscode';
 
@@ -108,4 +108,66 @@ export function activate(context: vscode.ExtensionContext) {
 
   context.subscriptions.push(vscode.commands.registerCommand(command, commandHandler));
 }
+```
+处理函数每当`myExtension.sayHello`命令执行时调用，每当使用`executeCommand`编程调用，从VS Code UI或一个绑定按键
+### 创建一个面向用户命令
+`vscode.commands.registerCommand`只绑定了一个命令ID与处理函数，想让它展现在命令面板使可以被用户找到，您同样需要在您扩展的`package.json`一个相应的命令`贡献点`
+```json
+{
+  "contributes": {
+    "commands": [
+      {
+        "command": "myExtension.sayHello",
+        "title": "Say Hello"
+      }
+    ]
+  }
+}
+```
+`command`贡献点告诉VS Code您的命令提供一个给定的命令且应该在命令调用时启用，而且让您控制命令在UI中的显示。现在我们的命令将在命令面板中出现：
+![](https://code.visualstudio.com/assets/api/extension-guides/commands/palette.png)
+现在当一个用户第一次从命令面板或一个绑定按键调用`myExtension.sayHello`命令，扩展会启用且`registerCommand`会绑定`myExtension.sayHello`到相应的处理程序
+> 注意：面向低于1.74.0版本的VS Code扩展必须明确地注册一个`onCommand``activationEvent`给所有面向用户命令以便您的扩展启用且`registerCommand`执行：
+> ```json
+> {
+>   "activationEvents": ["onCommand:myExtension.sayHello"]
+> }
+> ```
+您并不需要一个`onCommand`启用事件给内部命令但您必须定义它们如果命令是：
+- 可以使用命令面板调用
+- 可以使用绑定按键调用
+- 可以通过VS Code UI如编辑器标题栏调用
+- 预定作为一个API给其他扩展使用
+### 控制命令在命令面板中的出现
+默认，所有通过`package.json`的`commands`节贡献的面向用户的命令在命令面板中出现。然而，许多命令仅仅在确定的条件中有价值如当有启用的指定语言文本编辑器或用户有确定的配置选项设置
+
+[`menus.commandPalette`](/9.%20%E6%9F%A5%E9%98%85/2.%20%E8%B4%A1%E7%8C%AE%E7%82%B9.md#contributes.menus)贡献点让您限制一个命令何时应该显示在命令面板中。它需要目标命令的ID和一个[时间状语上下文](/9.%20%E6%9F%A5%E9%98%85/6.%20%E6%97%B6%E9%97%B4%E7%8A%B6%E8%AF%AD%E4%B8%8A%E4%B8%8B%E6%96%87.md)控制命令显示
+```json
+{
+  "contributes": {
+    "menus": {
+      "commandPalette": [
+        {
+          "command": "myExtension.sayHello",
+          "when": "editorLangId == markdown"
+        }
+      ]
+    }
+  }
+}
+```
+现在`myExtension.sayHello`仅当用户在一个Markdown文件中显示在命令面板中
+### 命令的启用
+命令通过一个`enablement`属性支持启用——它的值是一个[时间状语上下文](/9.%20%E6%9F%A5%E9%98%85/6.%20%E6%97%B6%E9%97%B4%E7%8A%B6%E8%AF%AD%E4%B8%8A%E4%B8%8B%E6%96%87.md)。启用应用到所有菜单和已注册按键绑定
+> 注意：菜单项`enablement`和`when`条件之间有语义重叠。后者用于阻止菜单中充满禁用项。例如，一个分析JavaScript正则表达式命令应该**当**文件是JavaScript时显示并且仅在指针在一个正则表达式上方时**启用**。`时间`状语通过在其他语言文件不显示命令阻止杂乱。强烈建议避免混乱的菜单
+
+最后，用菜单如命令面板或上下文菜单显示命令实现处理启用的不同方法。编辑器和浏览器上下文菜单在命令面板过滤它们时渲染启用/禁用项
+### 使用一个自定义时间状语上下文
+如果您正在编写您自己的VS Code扩展并且需要使用一个`时间`状语上下文启用/禁用命令、菜单或视图且没有已存在的键适合您的需求，那么您可以添加您自己的上下文
+
+下面第一个示例设置您可以在命令启用使用`when`属性的键`myExtension.showMyCommand`为真。第二个示例存储一个您可以通过`时间`状语上下文使用的值检查冷却开放事物数大于2
+```typescript
+vscode.commands.executeCommand('setContext', 'myExtension.showMyCommand', true);
+
+vscode.commands.executeCommand('setContext', 'myExtension.numberOfCoolOpenThings', 4);
 ```
